# lab-corpus-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  radar.example.toml
.github/workflows/: tests.yml
docs/: DEPLOY.md
scripts/: audit_image.py  docker_build.sh  docker_build_cache.sh  docker_download_models.sh  docker_entrypoint.sh  docker_parse_pdfs.sh  docker_serve_combined.sh  docker_serve_mcp.sh  process_pdfs.sh  upload_inbox.py
src/lab_corpus_mcp/: __init__.py  __main__.py  combined.py  config.py  corpus.py  ingest.py  server.py  upload_inbox.py
tests/: conftest.py  test_cli.py  test_combined.py  test_config.py  test_corpus.py  test_download.py  test_ingest.py  test_server.py  test_server_http.py
