[project]
name = "lab-corpus-mcp"
version = "0.0.1"
description = "Personal research-OS layer on top of arxiv-radar-mcp: literature PDFs, slides, admin tools."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
authors = [
    { name = "Igor Morozov", email = "igor@exopoiesis.space" }
]
keywords = ["mcp", "literature", "pdf", "research", "knowledge-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# arxiv-radar-mcp is a hard dependency: we reuse its Encoder, search
# primitives, Reranker, and base RadarServer. During development both
# repos live side-by-side under the same parent dir, and the docker
# image installs arxiv-radar-mcp from the COPY'd source.
#
# For pip-only local installs (no docker), do:
#   pip install -e ../arxiv-radar-mcp
#   pip install -e .
dependencies = [
    "mcp>=1.0",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
    "platformdirs>=4.0",
    "httpx>=0.27",
    # MinerU is the heavy one; pulled in via Docker, can be omitted from
    # local-only installs by using the [parse] extra explicitly.
]

[project.optional-dependencies]
parse = [
    "mineru[core]>=2.5",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
lab-corpus-mcp = "lab_corpus_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/exopoiesis/lab-corpus-mcp"
Issues = "https://github.com/exopoiesis/lab-corpus-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lab_corpus_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
