[project]
name = "lab-corpus-mcp"
version = "0.0.3"
description = "Personal research-OS layer on top of arxiv-radar-mcp: literature PDFs, slides, admin tools."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
authors = [
    { name = "Igor Morozov", email = "igor@exopoiesis.space" }
]
keywords = ["mcp", "literature", "pdf", "research", "knowledge-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# Three siblings share a Docker image / dev tree:
#   * corpus-core      — Encoder, EmbeddingIndex, search primitives,
#                        chunker, JobRegistry, MCP scaffold. On PyPI since 0.1.0.
#   * arxiv-radar-mcp  — RadarServer, arxiv shards, daily refresh.
#                        Lab depends on it for `combined` mode (one
#                        Qwen for both backends).
#   * lab-corpus-mcp   — this package.
#
# For pip-only local installs (no docker), siblings must be path-installed
# in dependency order:
#   pip install -e ../corpus-core   (or: pip install corpus-core)
#   pip install -e ../arxiv-radar-mcp
#   pip install -e .
#
# The Docker image (Dockerfile) does the same thing inside the container.
dependencies = [
    "corpus-core>=0.1.0",
    "arxiv-radar-mcp>=0.0.1",
    "mcp>=1.0",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "tomli>=2.0; python_version < '3.11'",
    "platformdirs>=4.0",
    "httpx>=0.27",
    # MinerU is the heavy one; pulled in via the Docker image (or the
    # [parse] extra below for local installs).
]

[project.optional-dependencies]
parse = [
    "mineru[core]>=2.5",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
lab-corpus-mcp = "lab_corpus_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/exopoiesis/lab-corpus-mcp"
Issues = "https://github.com/exopoiesis/lab-corpus-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lab_corpus_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
